--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Smart_home_XXII</title>
+        <title>Smart_kitchen</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -64,10 +64,10 @@
                   <div>
                     <h4>Комнаты</h4>
                     <ul>
-                      <li><a href="s_lecture-hall.html">Зал</a></li>
-                      <li><a href="#">Спальня</a></li>
-                      <li><a href="#">Коридор</a></li>
-                      <li><a href="#">Кухня</a></li>
+                      <li><a href="s_lecture-hall.html">Контролинг показаний</a></li>
+                      <li><a href="#">Безопасность</a></li>
+                      <li><a href="#">Использование RFID-карти</a></li>
+                      <li><a href="#">Контроль продуктов</a></li>
                       <li><a href="#">Ванная комната и санузел</a></li>
                       <li><a href="#">Вход в дом</a></li>
 
@@ -85,7 +85,6 @@
                     <ul>
                       <li><a href="inf_upravlenie_pitaniem.html"> Преимущество нашей системы </a></li>
                       <li><a href="#">Распределение датчиков</a></li>
-                      <li><a href="#">Макет</a></li>
                     </ul>
                     </div>
                 </div>
@@ -102,7 +101,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>SMART HOME XXII</h1>
+            <h1>SMART KITCHEN</h1>
           </div>
         </div>
       </div>
@@ -122,8 +121,9 @@
       <h1 style=" color: #FFFFFF ; text-align: center; font-size: 350%;">Что такое "Умный дом"?</h1>
   
       <div class = "text" style="margin-right: 4%; text-align: center; width: 100%; background-color: rgba(245, 245, 245, .8); box-sizing: border-box; padding-top: 1%; padding-bottom: 1%; padding-left: 10%; padding-right: 10%;">
-      Под «умным» домом следует понимать систему, которая обеспечивает безопасность, ресурсосбережение, а также комфортное времяпрепровождение для всех пользователей. Дом сможет разбудить вас с утра, помочь со сборами на работу. Защитит жильё, пока вы будете вне его. В это же время вы сможете получать важную информацию о нём и управлять системой дистанционно. 
-      <br>«Умный дом» сможет незаметно влиться в вашу жизнь, наблюдая за ней.
+      Наши предложения для разработки аппаратно-программного комплекса для обеспечения контроля и мониторинга работы кухни для организаций общепита являются выгодными вариантами модернизации. 
+Они улучшают условия работы персонала, создают обратную связь с клиентами, ускоряют, быстро окупаются и приносят прибыль.
+
     </div>
     </div>
  
